[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid_utils"
version = "0.0.1"
authors = [
  { name="MPG" },
]
description = "Tools for running the RAPID model."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]